# todo-app

./: Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/http/: mod.rs
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
